--- a/terapautisk.html
+++ b/terapautisk.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Terapautisk melk</title>
-    <link rel="stylesheet" href="/css/terapautisk.css">
+    <link rel="stylesheet" href="./css/terapautisk.css">
 </head>
 
 <body>
