--- a/terapautisk.html
+++ b/terapautisk.html
@@ -14,7 +14,7 @@
                 <nav>
     
                         <div onclick="location.href=`https://www.unicef.no/home?utm_source=landingpage&utm_medium=natural&utm_campaign=jul2015`;" class="curser">
-                        <img class="logo" src="../img/hvit_logo.png" alt="logo">
+                        <img class="logo" src="./img/hvit_logo.png" alt="logo">
                         </nav>
                     </header>
             </header>
